--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "docs"]
 	path = docs
-	branch = main
+	branch = dev
 	url = https://github.com/jonascsilva/portfolio
 [submodule "backend"]
 	path = backend
-	branch = main
+	branch = dev
 	url = https://github.com/jonascsilva/studynest-backend
 [submodule "frontend"]
 	path = frontend
-	branch = main
+	branch = dev
 	url = https://github.com/jonascsilva/studynest-frontend
